# hdrToggle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
api/: nvapi_deps.h  sdk_status.cpp  sdk_status.h  toggle.cpp  toggle.h
api/include/: color_mode.h  sdk_status.h  toggle.h
icon/: AppIcon.rc  hdrToggle.afdesign
